<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main2Activity"
    tools:showIn="@layout/app_bar_main2"
    android:id="@+id/main2_constraint"
    android:background="#EEEEEE"
    >
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <!--<EditText-->
                    <!--android:id="@+id/search_field"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginRight="5dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_toStartOf="@+id/search_btn"-->
                    <!--android:background="@drawable/search_layout"-->
                    <!--android:focusable="false"-->
                    <!--android:ems="10"-->

                    <!--android:hint="Search here"-->
                    <!--android:inputType="textPersonName"-->
                    <!--android:paddingBottom="7dp"-->
                    <!--android:paddingLeft="15dp"-->
                    <!--android:paddingRight="15dp"-->
                    <!--android:paddingTop="7dp"-->
                    <!--android:textColor="#999999"-->
                    <!--android:textSize="9sp" />-->



                <!--<ImageButton-->
                    <!--android:id="@+id/search_btn"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:maxHeight="10dp"-->
                    <!--android:maxWidth="10dp"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_alignBottom="@+id/search_field"-->
                    <!--android:layout_marginRight="3dp"-->
                    <!--android:background="#EEEEEE"-->
                    <!--app:srcCompat="@mipmap/search_button" />-->
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <include layout="@layout/main_top_carousel" />
            </LinearLayout>

            <!--<android.support.v4.widget.NestedScrollView-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_marginTop="5dp"-->
                <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
                <!--&gt;-->
                <LinearLayout
                    android:paddingTop="5dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="12sp"
                        android:paddingTop="2dp"
                        android:paddingBottom="1dp"
                        android:textStyle="bold"
                        android:text="Our Services"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="right"
                        android:textSize="11sp"
                        android:paddingTop="3dp"
                        android:paddingBottom="1dp"
                        android:paddingRight="6dp"
                        android:text="See all"/>
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        android:fillViewport="true"
                        android:layout_marginBottom="55dp"
                        android:id="@+id/mainlayoutrecycler">
                    </android.support.v7.widget.RecyclerView>


                </LinearLayout>
            <!--</android.support.v4.widget.NestedScrollView>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linear_quicklinkarea"
                android:layout_marginBottom="58dp"
                >
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardUseCompatPadding="true"
                    app:cardElevation="6dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:paddingLeft="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/quick_link"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:paddingLeft="10dp"
                                android:onClick="loadFacebook">
                                <ImageView
                                    android:layout_width="@dimen/main_quick_link_block_icon"
                                    android:layout_height="@dimen/main_quick_link_block_icon"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_facebook"
                                    android:layout_gravity="center_horizontal"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/facebook"
                                    android:textSize="@dimen/main_user_info"
                                    android:paddingBottom="5dp"
                                    android:gravity="center_horizontal"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:onClick="loadInstagram"
                                android:paddingLeft="10dp">
                                <ImageView
                                    android:layout_width="@dimen/main_quick_link_block_icon"
                                    android:layout_height="@dimen/main_quick_link_block_icon"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_instagram"
                                    android:layout_gravity="center_horizontal"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/instagram"
                                    android:textSize="@dimen/main_user_info"
                                    android:paddingBottom="5dp"
                                    android:gravity="center_horizontal"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:paddingLeft="10dp"
                                android:onClick="loadWeb">
                                <ImageView
                                    android:layout_width="@dimen/main_quick_link_block_icon"
                                    android:layout_height="@dimen/main_quick_link_block_icon"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_interent"
                                    android:layout_gravity="center_horizontal"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/internet"
                                    android:textSize="@dimen/main_user_info"
                                    android:paddingBottom="5dp"
                                    android:gravity="center_horizontal"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:onClick="callhelpline"
                                android:paddingLeft="5dp">
                                <ImageView
                                    android:layout_width="@dimen/main_quick_link_block_icon"
                                    android:layout_height="@dimen/main_quick_link_block_icon"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_phone"
                                    android:layout_gravity="center_horizontal"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/invite"
                                    android:textSize="@dimen/main_user_info"
                                    android:paddingBottom="5dp"
                                    android:gravity="center_horizontal"/>
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>





</android.support.constraint.ConstraintLayout>